<h4>2.7.4.4 - 02/09/2024</h4>
<p><strong>Hotfix</strong></p>
<ul>
	<li>Fix shortcodes not rendering properly in link fields</li>
</ul>

<h4>2.7.4.3 - 02/08/2024</h4>
<strong>Hotfix</strong>
<ul>
	<li>Security: Add additional sanitization and escaping when rendering URLs to prevent XSS</li>
	<li>Security: Fix Reflected (DOM-Based) XSS issue</li>
	<li>Security: Fix issues with shortcodes potentially rendering protected content to those without access (#3116)</li>
	<li>Escape HTML in UI for saved layouts (#3064)</li>
</ul>

<h4>2.7.4.2 - 12/20/2023</h4>
<strong>Hotfix</strong>
<ul>
	<li>Fix node CSS/JS code check applying to the HTML module(#3066)</li>
</ul>

<h4>2.7.4.1 - 12/15/2023</h4>
<strong>Hotfix</strong>
<ul>
	<li>Fix gradients not displaying at all breakpoints (#3060)</li>
</ul>

<h4>2.7.4 - 12/14/2023</h4>
<strong>Enhancements</strong>
<ul>
	<li>Performance: Optimize Template loading in the UI (#3038)</li>
	<li>Code Editor: Shortcodes no longer trigger errors in Ace Editor when Shortcode support in CSS/JS is enabled (#2872)</li>
	<li>Node CSS/JS: HTML now detected in JS when Shortcode support in CSS/JS is not enabled (#2929)</li>
	<li>Saved Nodes: category will now be added to the HTML in the WP Admin as a class (#2806)</li>
	<li>Post Module: add JS trigger event <code>gridScrollComplete</code> to module wrapper for load more and scroll pagination (#1558)</li>
	<li>Aspect Ratio: Now allows float values (#2981)</li>
</ul>

<strong>Bug Fixes</strong>
<ul>
	<li>WP 6.4: Fix 404 if launching BB on a new post/page with no title (#3040)</li>
	<li>Safe Mode: images are no longer cropped (#2662)</li>
	<li>Fix equal columns width issue at small breakpoint (#3011)</li>
	<Li>Fix fatal error with PHP 8.2 if column CSS array key does not exist (#2983)</li>
	<li>Accordion Module: Fix live preview of label text color (#2992)</li>
	<li>Callout Module: If no text is added, container divs are not added (#2961)</li>