@@ -4,7 +4,7 @@ Tags: page builder, beaver builder, landing page, front-end builder, drag and dr
 Requires at least: 4.6
 Tested up to: 6.4
 Requires PHP: 7.0
-Stable tag: 2.7.4.4
+Stable tag: 2.7.4.5
 License: GPL2+
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 
